# sexec

./: .gitignore  Makefile.am  README.md  configure.ac
contrib/: 0001-Don-t-poll-closed-fds.patch  pack.sh
debian/: changelog  control
src/: Makefile.am  main.cc
